--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FabricantePageActivity">
+    tools:context=".RegisterActivity2">
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Nuevo Fabricante "
-        android:textSize="10sp"
+        android:text="Nuevo Usuario "
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:onClick="addFab_OnClick"
+        android:onClick="addUsers_Onclick"
         android:text="Ingresar"
         android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
-        android:onClick="updateFab_Onclick"
+        android:onClick="updateUser_Onclick"
         android:text="Actualizar"
         android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
-        android:onClick="deleteFab_onclick"
+        android:onClick="deleteUser_onclick"
         android:text="Eliminar"
         android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,9 +70,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
+        android:backgroundTint="#1F6155"
         android:onClick="selectOne_Onclick"
         android:text="Buscar"
-        android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="120dp"
-        android:text="Lista de Fabricantes"
+        android:text="Lista Usuarios"
+        android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +100,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
-        android:hint="Id Fabricante"
+        android:hint="Nombre"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +114,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
-        android:hint="Nombre Fabricante"
+        android:hint="Usuario (Eje: kpaz)"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -128,7 +129,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
-        android:hint="Pais"
+        android:hint="Contraseña "
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
