--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -29,6 +29,7 @@
         android:layout_marginEnd="32dp"
         android:onClick="FabricantePage_OnClick"
         android:text="FABRICANTES"
+        android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -53,7 +54,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:onClick="Register2Page_OnClick"
         android:text="USUARIOS"
+        android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
