--- a/app/src/main/res/layout/activity_all_vehiculos.xml
+++ b/app/src/main/res/layout/activity_all_vehiculos.xml
@@ -4,25 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllFabricanteActivity">
+    tools:context=".AllVehiculosActivity">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textColor="#000000"
-        tools:text="Fabricantes" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fillViewport="true">
+            android:fillViewport="false">
 
             <TableLayout
                 android:id="@+id/tbl_allVehiculos"
@@ -30,4 +23,5 @@
                 android:layout_height="match_parent" />
         </HorizontalScrollView>
     </ScrollView>
+
 </LinearLayout>
