--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -43,6 +43,7 @@
         android:layout_marginEnd="32dp"
         android:onClick="VehiculoPage_OnClick"
         android:text="VEHICULOS"
+        android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
