--- a/app/src/main/res/layout/activity_vehiculo.xml
+++ b/app/src/main/res/layout/activity_vehiculo.xml
@@ -83,6 +83,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="120dp"
         android:backgroundTint="#1F6155"
+        android:onClick="AllVehiculoPage_OnClick"
         android:text="Lista Vehiculos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
