--- a/app/src/main/res/layout/activity_all_fabricante.xml
+++ b/app/src/main/res/layout/activity_all_fabricante.xml
@@ -25,7 +25,7 @@
             android:fillViewport="true">
 
             <TableLayout
-                android:id="@+id/tbl_allVehiculos"
+                android:id="@+id/tbl_allUsers"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
         </HorizontalScrollView>
