--- a/app/src/main/res/layout/activity_fabricante_page.xml
+++ b/app/src/main/res/layout/activity_fabricante_page.xml
@@ -87,6 +87,7 @@
         android:layout_marginEnd="120dp"
         android:onClick="AllFabricantePage_OnClick"
         android:text="Lista de Fabricantes"
+        android:backgroundTint="#1F6155"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
