--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -85,8 +85,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="120dp"
-        android:text="Lista Usuarios"
         android:backgroundTint="#1F6155"
+        android:onClick="AllUserPage_OnClick"
+        android:text="Lista Usuarios"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
